--- a/Event-planner-frontend/src/index.css
+++ b/Event-planner-frontend/src/index.css
@@ -11,9 +11,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light;
-  color: #213547;
-  background-color: #f5f5f5;
+  color-scheme: dark;
+  color: #ffffff;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,7 +29,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
-  color: #333;
+  color: #ffffff;
 }
 
 a {
